tests/compile-fail/integration__integration__general__duplicate_label.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: duplicate label 'label'
   ┌─ <input>:23:5
   │
22 │     label:
   │     ----- originally defined here
23 │     label:
   │     ^^^^^ redefined here


